--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,38 @@
 .App {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   color-scheme: light dark;
-  background-color: #242424;
+  background-color: #09090B;
   color: rgba(255, 255, 255, 0.87);
   min-height: 100dvh;
 }
+
+header {
+  border-bottom: 1px solid rgb(55 65 81);
+}
+
+.header-inner {
+  padding-top: 1.2rem;
+  padding-bottom: 1.2rem;
+  width: 90%;
+  margin-inline: auto;
+  overflow: hidden;
+
+  display: grid;
+  grid-template-columns: auto 1fr auto auto;
+  gap: 2rem;
+  justify-content: center;
+}
+
+
+@media (width < 768px) {
+  .nav-desktop, .logo {
+    display: none;
+  }
+
+  .header-inner {
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    gap: 1rem;
+  }
+}
+
