--- a/src/App.css
+++ b/src/App.css
@@ -35,13 +35,20 @@ header {
   justify-content: center;
 }
 
-/* home width is 100% and home -> header -> header-inner -> nav-mobile, thats why home position is relative  */
+/* header -> header-inner -> nav-mobile  */
 .nav-mobile {
   z-index: 99;
   position: absolute;
   left: 0;
   right: 0;
-  top: 100%;
+  top: 100;
+  height: 100dvh;
+}
+
+@media (width >= 768px) {
+  .nav-mobile {
+    display: none;
+  }
 }
 
 .nav-mobile ul {
