--- a/src/App.css
+++ b/src/App.css
@@ -39,10 +39,15 @@ header {
 .nav-mobile {
   z-index: 99;
   position: absolute;
-  left: 0;
   right: 0;
-  top: 100;
+  top: 0;
+  left: 20%;
   height: 100dvh;
+  display: flex;
+  flex-direction: column;
+  gap: 2.6rem;
+  padding-top: 2.5rem;
+  border-left: 1px solid white;
 }
 
 @media (width >= 768px) {
@@ -51,19 +56,17 @@ header {
   }
 }
 
-.nav-mobile ul {
-  display: grid;
-  gap: .2rem;
+.nav-mobile > * {
+  padding-left: 2.6rem;
 }
 
-.nav-mobile li {
-  border: 1px solid gray;
-  border-radius: 10px;
-  padding-top: 1.2rem;
-  padding-bottom: 1.2rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.nav-mobile ul {
+  display: grid;
+  gap: 1rem;
+}
+
+.link {
+  font-weight: 500;
 }
 
 @media (width < 768px) {
